--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "license": "MIT",
   "dependencies": {
     "debug": "^3.0.1",
+    "merge-recursive": "0.0.3",
     "mkdirp": "^0.5.1",
     "pkg": "^4.2.4",
     "rimraf": "^2.6.1"
