--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "merge-recursive": "0.0.3",
     "mkdirp": "^0.5.1",
     "pkg": "^4.2.4",
-    "rimraf": "^2.6.1"
+    "rimraf": "^2.6.1",
+    "uuid": "^3.1.0"
   },
   "devDependencies": {},
   "repository": {
