--- a/appveyor.yml
+++ b/appveyor.yml
@@ -9,6 +9,7 @@ init: #fix for .cmd
 install:
   # Get the latest stable version of Node.js or io.js
   - ps: Install-Product node $env:nodejs_version
+  - npm i
 
 # Post-install test scripts.
 test_script:
