--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,6 +1,9 @@
 # Test against the latest version of this Node.js version
 environment:
-  nodejs_version: "8"
+  matrix:
+    - nodejs_version: "8"
+    - nodejs_version: "6"
+    - nodejs_version: "4"
 
 init: #fix for .cmd
   - git config --global core.autocrlf true
