--- a/package.json
+++ b/package.json
@@ -19,12 +19,12 @@
   "author": "Maciej Krüger <mkg20001@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "debug": "^3.0.1",
+    "debug": "^3.1.0",
     "merge-recursive": "0.0.3",
     "mkdirp": "^0.5.1",
-    "pkg": "^4.2.4",
-    "rimraf": "^2.6.1",
-    "upath": "^1.0.0",
+    "pkg": "^4.3.0-beta.1",
+    "rimraf": "^2.6.2",
+    "upath": "^1.0.2",
     "uuid": "^3.1.0"
   },
   "devDependencies": {},
